--- a/locations.yml
+++ b/locations.yml
@@ -1,3 +1,11 @@
-defaultStorageMapping: null
+defaultStorageMapping: TARGET
 fileVersion: 1
-locations: []
+locations:
+  - COALESCE_APP
+  - DATADOG
+  - DATES
+  - PYLON
+  - SALESFORCE
+  - STAGING
+  - TARGET
+  - ZENDESK
